Improve CamDetectionFrame timing
Closes #2092

See merge request main/Sumatra!2032

sumatra-commit: e56acf288cb1f6d63df5ed6f8b110cf8e4e4da71